--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="https://lottie.host/afcb4212-61f8-4a35-a83f-ddf0fc4fc610/io0UxAPRm0.json" alt="">
+                <img src="https://cdn.pixabay.com/photo/2019/10/09/07/28/development-4536630_960_720.png" alt="">
                 <h2 class="h-secondary center">Website Design </h2>
                 <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel error consequatur nemo.
                     Officiis, sit, atque corrupti veniam animi error officia, modi suscipit excepturi adipisci non
                     repellat autem reiciendis nobis quia omnis aut ipsam explicabo!</p>
             </div>
             <div class="box">
-                <img src="https://lottie.host/35a84597-bc78-489d-b3b0-46a76a59be0e/uz5zFAvC3Q.json" alt="">
+                <img src="https://cdn.pixabay.com/photo/2013/07/12/12/49/computer-146330_1280.png" alt="">
                 <h2 class="h-secondary center"> Application Design </h2>
                 <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel error consequatur nemo.
                     Officiis, sit, atque corrupti veniam animi error officia, modi suscipit excepturi adipisci non
                     repellat autem reiciendis nobis quia omnis aut ipsam explicabo!</p>
             </div>
             <div class="box">
-                <img src="https://lottie.host/636d2bb9-27e5-492e-9e7c-fb7840d17a80/ScH3bDWECg.json" alt="">
+                <img src="https://cdn.pixabay.com/photo/2017/01/29/13/20/laptop-2017978_1280.png" alt="">
                 <h2 class="h-secondary center">Game Design </h2>
                 <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel error consequatur nemo.
                     Officiis, sit, atque corrupti veniam animi error officia, modi suscipit excepturi adipisci non
